brisknote opens file from deep links

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_past_notes_list">Past Notes</string>
     <string name="choose_note">Choose a Past Note to Edit</string>
+    <string name="open_note">Open a Note Using Deep Link</string>
 </resources>
